first release. streamlit works with test.csv, wait for real csv file

--- a/AmDm_html_parsing.ipynb
+++ b/AmDm_html_parsing.ipynb
@@ -254,16 +254,445 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "541abf4d-a619-4bb6-9287-66badcde72d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f9aa1cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = {\n",
+    "    'Небесные стражи': 'В мире, где магия и технологии сосуществуют, группа героев должна объединиться, чтобы спасти мир от древнего зла.',\n",
+    "    'Восход теней': 'История о молодом волшебнике, который обнаруживает, что он является ключом к победе над тьмой, угрожающей всему миру.',\n",
+    "    'Забытый город': 'Группа археологов обнаруживает древний город, спрятанный глубоко в джунглях, но вскоре понимает, что они не одни.',\n",
+    "    'Вечная Зима': 'В мире, где зима длится вечно, группа повстанцев борется за возвращение солнца и восстановление баланса природы.',\n",
+    "    'Код судьбы': 'Ученый обнаруживает способ предсказывать будущее, но каждый раз, когда он меняет ход событий, его настоящее становится все более неопределенным.',\n",
+    "    'Потерянный рай': 'Пара влюбленных отправляется в путешествие по миру, чтобы найти легендарный рай, но на их пути встречаются опасности и неожиданные открытия.',\n",
+    "    'Сердце океана': 'История о молодой морской волшебнице, которая должна спасти свой народ от разрушения подводного мира.',\n",
+    "    'Тень времени': 'Фильм о человеке, который обнаруживает способ путешествовать во времени, но каждый раз, когда он меняет прошлое, его настоящее становится все более хаотичным.',\n",
+    "    'Секретный мир': 'Группа друзей обнаруживает скрытый мир внутри своего собственного, где они должны преодолеть свои страхи и сомнения.',\n",
+    "    'Бесконечная ночь': 'В городе, где солнце никогда не восходит, группа героев должна найти способ вернуть свет и победить тьму.',\n",
+    "    'Путь воина': 'История о молодом воине, который отправляется в путешествие, чтобы стать величайшим мастером боевых искусств и защитить свой народ от врагов.',\n",
+    "    'Горящий лес': 'Группа лесных существ должна объединиться, чтобы спасти свой дом от пожара, вызванного безрассудными действиями людей.',\n",
+    "    'Звездный путь': 'Космические путешественники обнаруживают новый мир, но вскоре понимают, что они не одни в галактике.',\n",
+    "    'Волшебный кристалл': 'Молодая волшебница обнаруживает магический кристалл, который дает ей невероятные силы, но также привлекает внимание темных сил.',\n",
+    "    'Путешествия во времени': 'Семья обнаруживает машину времени и отправляется в приключение по разным эпохам, но каждый раз, когда они меняют прошлое, их настоящее становится все более сложным.',\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ed506f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_csv = pd.DataFrame({\n",
+    "    #'Index': range(0, 15),\n",
+    "    'Title': texts.keys(),\n",
+    "    'Description': texts.values()\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0306fc03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "588e418f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 1, 10, 14, 9, 2, 0, 8, 7, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = []\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "    index = random.randint(0, test_csv.shape[0])\n",
+    "    if index not in indices:\n",
+    "        indices.append(index)\n",
+    "        i += 1\n",
+    "\n",
+    "print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "77c0bfcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 6, 7, 8, 9, 10, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = sorted(indices)\n",
+    "print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f09b8624",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Небесные стражи</td>\n",
+       "      <td>В мире, где магия и технологии сосуществуют, г...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Восход теней</td>\n",
+       "      <td>История о молодом волшебнике, который обнаружи...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Забытый город</td>\n",
+       "      <td>Группа археологов обнаруживает древний город, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Сердце океана</td>\n",
+       "      <td>История о молодой морской волшебнице, которая ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Тень времени</td>\n",
+       "      <td>Фильм о человеке, который обнаруживает способ ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Секретный мир</td>\n",
+       "      <td>Группа друзей обнаруживает скрытый мир внутри ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Бесконечная ночь</td>\n",
+       "      <td>В городе, где солнце никогда не восходит, груп...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Путь воина</td>\n",
+       "      <td>История о молодом воине, который отправляется ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Звездный путь</td>\n",
+       "      <td>Космические путешественники обнаруживают новый...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Путешествия во времени</td>\n",
+       "      <td>Семья обнаруживает машину времени и отправляет...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Title                                        Description\n",
+       "0          Небесные стражи  В мире, где магия и технологии сосуществуют, г...\n",
+       "1             Восход теней  История о молодом волшебнике, который обнаружи...\n",
+       "2            Забытый город  Группа археологов обнаруживает древний город, ...\n",
+       "6            Сердце океана  История о молодой морской волшебнице, которая ...\n",
+       "7             Тень времени  Фильм о человеке, который обнаруживает способ ...\n",
+       "8            Секретный мир  Группа друзей обнаруживает скрытый мир внутри ...\n",
+       "9         Бесконечная ночь  В городе, где солнце никогда не восходит, груп...\n",
+       "10              Путь воина  История о молодом воине, который отправляется ...\n",
+       "12           Звездный путь  Космические путешественники обнаруживают новый...\n",
+       "14  Путешествия во времени  Семья обнаруживает машину времени и отправляет..."
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv.iloc[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7e1c6fac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Бесконечная ночь</td>\n",
+       "      <td>В городе, где солнце никогда не восходит, груп...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Путь воина</td>\n",
+       "      <td>История о молодом воине, который отправляется ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Забытый город</td>\n",
+       "      <td>Группа археологов обнаруживает древний город, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Путешествия во времени</td>\n",
+       "      <td>Семья обнаруживает машину времени и отправляет...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Горящий лес</td>\n",
+       "      <td>Группа лесных существ должна объединиться, что...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Код судьбы</td>\n",
+       "      <td>Ученый обнаруживает способ предсказывать будущ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Восход теней</td>\n",
+       "      <td>История о молодом волшебнике, который обнаружи...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Секретный мир</td>\n",
+       "      <td>Группа друзей обнаруживает скрытый мир внутри ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Волшебный кристалл</td>\n",
+       "      <td>Молодая волшебница обнаруживает магический кри...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Звездный путь</td>\n",
+       "      <td>Космические путешественники обнаруживают новый...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Title                                        Description\n",
+       "9         Бесконечная ночь  В городе, где солнце никогда не восходит, груп...\n",
+       "10              Путь воина  История о молодом воине, который отправляется ...\n",
+       "2            Забытый город  Группа археологов обнаруживает древний город, ...\n",
+       "14  Путешествия во времени  Семья обнаруживает машину времени и отправляет...\n",
+       "11             Горящий лес  Группа лесных существ должна объединиться, что...\n",
+       "4               Код судьбы  Ученый обнаруживает способ предсказывать будущ...\n",
+       "1             Восход теней  История о молодом волшебнике, который обнаружи...\n",
+       "8            Секретный мир  Группа друзей обнаруживает скрытый мир внутри ...\n",
+       "13      Волшебный кристалл  Молодая волшебница обнаруживает магический кри...\n",
+       "12           Звездный путь  Космические путешественники обнаруживают новый..."
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_csv.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3f70ffa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title                                            Небесные стражи\n",
+      "Description    В мире, где магия и технологии сосуществуют, г...\n",
+      "Name: 0, dtype: object\n",
+      "Title                                               Восход теней\n",
+      "Description    История о молодом волшебнике, который обнаружи...\n",
+      "Name: 1, dtype: object\n",
+      "Title                                              Забытый город\n",
+      "Description    Группа археологов обнаруживает древний город, ...\n",
+      "Name: 2, dtype: object\n",
+      "Title                                                Вечная Зима\n",
+      "Description    В мире, где зима длится вечно, группа повстанц...\n",
+      "Name: 3, dtype: object\n",
+      "Title                                                 Код судьбы\n",
+      "Description    Ученый обнаруживает способ предсказывать будущ...\n",
+      "Name: 4, dtype: object\n",
+      "Title                                             Потерянный рай\n",
+      "Description    Пара влюбленных отправляется в путешествие по ...\n",
+      "Name: 5, dtype: object\n",
+      "Title                                              Сердце океана\n",
+      "Description    История о молодой морской волшебнице, которая ...\n",
+      "Name: 6, dtype: object\n",
+      "Title                                               Тень времени\n",
+      "Description    Фильм о человеке, который обнаруживает способ ...\n",
+      "Name: 7, dtype: object\n",
+      "Title                                              Секретный мир\n",
+      "Description    Группа друзей обнаруживает скрытый мир внутри ...\n",
+      "Name: 8, dtype: object\n",
+      "Title                                           Бесконечная ночь\n",
+      "Description    В городе, где солнце никогда не восходит, груп...\n",
+      "Name: 9, dtype: object\n",
+      "Title                                                 Путь воина\n",
+      "Description    История о молодом воине, который отправляется ...\n",
+      "Name: 10, dtype: object\n",
+      "Title                                                Горящий лес\n",
+      "Description    Группа лесных существ должна объединиться, что...\n",
+      "Name: 11, dtype: object\n",
+      "Title                                              Звездный путь\n",
+      "Description    Космические путешественники обнаруживают новый...\n",
+      "Name: 12, dtype: object\n",
+      "Title                                         Волшебный кристалл\n",
+      "Description    Молодая волшебница обнаруживает магический кри...\n",
+      "Name: 13, dtype: object\n",
+      "Title                                     Путешествия во времени\n",
+      "Description    Семья обнаруживает машину времени и отправляет...\n",
+      "Name: 14, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in test_csv.iterrows():\n",
+    "    print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a804d6a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taro, indices = random_generator(df)\n",
+    "l, mid, r = st.columns(3)\n",
+    "mid.subheader('Вот твоя топовая подборка на сегодня!')\n",
+    "for i in indices:\n",
+    "    st.write(f'Название фильма - {taro['Title'][i]}')\n",
+    "    st.write(f'Краткое описание - {taro['Description'][i]}')\n",
+    "\n",
+    "left, middle, right = st.columns(3)\n",
+    "middle.button('Крутите барабан', icon=\"🎰\", use_container_width=True)\n",
+    "\n",
+    "row1 = st.columns(3)\n",
+    "row2 = st.columns(4)\n",
+    "row3 = st.columns(3)\n",
+    "\n",
+    "rows = row1 + row2 + row3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df8a508d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, (col, (_, movies)) in enumerate(zip(rows, output.iterrows())):\n",
+    "    tile = col.container(height=130)\n",
+    "    tile.subheader(f'🎬 {movies['Title']}')\n",
+    "\n",
+    "    if tile.button(f'🔍 Описание фильма {i}'):\n",
+    "        col.write(f'{movies['Description']}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "phase2",
    "language": "python",
    "name": "python3"
   },
@@ -277,12 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "73ec0c878552fcb71893c22b7af2c9be9210ef33785c90eb804f443984ec4506"
-   }
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
